WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
317345
LogStream::create fails to call its completion handler when StreamServerConnection creation fails
https://bugs.webkit.org/show_bug.cgi?id=317345
Summary
LogStream::create fails to call its completion handler when StreamServerConne...
Charlie Wolfe
Reported
2026-06-17 15:05:21 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-17 15:05:29 PDT
<
rdar://problem/179966498
>
Charlie Wolfe
Comment 2
2026-06-17 15:06:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/67381
EWS
Comment 3
2026-06-23 14:12:25 PDT
Committed
315704@main
(d0f6a3d24490): <
https://commits.webkit.org/315704@main
> Reviewed commits have been landed. Closing PR #67381 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug