LogStream::create fails to call its completion handler when StreamServerConnection creation fails https://bugs.webkit.org/show_bug.cgi?id=317345 rdar://179966498

Reviewed by Pascoe.

* Source/WebKit/Shared/LogStream.mm:
(WebKit::LogStream::create):

Canonical link: https://commits.webkit.org/315704@main